tests/ui/coercion/coerce-mut.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-mut.rs:7:7
   |
LL |     f(&x);
   |     - ^^ types differ in mutability
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut i32`
                      found reference `&{integer}`
note: function defined here
  --> $DIR/coerce-mut.rs:3:4
   |
LL | fn f(x: &mut i32) {}
   |    ^ -----------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
